08/ingress/home.yml
---
# Deployment
kind: Deployment
apiVersion: apps/v1
metadata:  # namespce, labels, annotation 가능
  name: home-deploy
spec: 
  replicas: 1
  selector:
    matchLabels:
      name: home
  template:
    metadata:
      name: home-pod
      labels: 
        name: home
    spec:
      containers:
        - name: home-container
          image: httpd
          ports: 
            - containerPort: 80

---
# service
kind: Service
apiVersion: v1
metadata:
  name: home-service
spec:
  type: ClusterIP
  selector:       # 서비스가 여러개 만들어지므로 labels 통해서 연동
    name: home
  ports:
    - port: 80
      targetPort: 80
