08/ingress/testns.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: testns

---
# Deployment
kind: Deployment
apiVersion: apps/v1
metadata:  # namespce, labels, annotation 가능
  name: home-deploy
  namespace: testns
spec: 
  replicas: 1
  selector:
    matchLabels:
      name: home
  template:
    metadata:
      name: home-pod
      labels: 
        name: home
    spec:
      containers:
        - name: home-container
          image: httpd
          ports: 
            - containerPort: 80

---
# service
kind: Service
apiVersion: v1
metadata:
  name: home-service
  namespace: testns
spec:
  type: ClusterIP
  selector:       # 서비스가 여러개 만들어지므로 labels 통해서 연동
    name: home
  ports:
    - port: 80
      targetPort: 80
---
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: pay-deploy
  namespace: testns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pay
  template:
    metadata:
      name: pay-pod
      labels:
        app: pay
    spec:
      containers:
        - name: pay-container
          image: whatwant/node-web:2.0
          ports:
            - containerPort: 8080

---
# service
kind: Service
apiVersion: v1
metadata:
  name: pay-service
  namespace: testns
spec:
  type: ClusterIP
  selector:
    app: pay
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepay-ingress
  namespace: testns
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-service
            port:
              number: 80
      - path: /pay
        pathType: Prefix
        backend:
          service:
            name: pay-service
            port:
              number: 8080
